[package]
name = "ipfs_upload"
version = "0.1.0"
authors = ["Emil Majchrzak <majchrzakemil@gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.3.0"
ipfs-api-backend-actix = "0.3"
web3 = "0.17.0"
hex-literal = "0.3.3"
